# AI_credit_risk_prediction

./: README.md  pyproject.toml
aienv/algorithms/SVM/: README.md  svm.ipynb  svmpreprocessing.ipynb
aienv/algorithms/decision_tree/: README.md  decision_tree.ipynb  dtpreprocessing.ipynb
aienv/algorithms/knn/: README.md  k_nearest_neighbor.ipynb  knnpreprocessing.ipynb
aienv/algorithms/logistic_regression/: README.md  logistic_regression.ipynb  lrpreprocessing.ipynb
aienv/algorithms/naive_bayes/: README.md  naive_bayes.ipynb  nbpreprocessing.ipynb
aienv/algorithms/neural_network/: README.md  neural_network.ipynb  nnpreprocessing.ipynb
aienv/algorithms/random_forest/: README.md  random_forest.ipynb  rfpreprocessing.ipynb
