[tool.poetry]
name = "aienv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^6.1.2"
pandas = "^2.2.3"
numpy = "^2.2.6"
seaborn = "^0.13.2"
matplotlib = "^3.10.3"
ipython = "^9.3.0"
nbformat = "^5.10.4"
scikit-learn = "^1.6.1"
yellowbrick = "^1.5"
setuptools = "^80.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
